# reconkit-

./: .gitattributes  .gitignore  LICENSE  README.md  meta.py  pyproject.toml  reconkit.py  requirements.txt
.github/workflows/: ci.yml
config/: config.example.ini
modules/: __init__.py  aggregator.py  asn.py  dns_recon.py  emails.py  integrations.py  reporter.py  risk.py  shodan_lookup.py  subdomains.py  threat_intel.py  urlscan.py  wayback.py  whois_lookup.py
templates/: report.html
tests/: test_reconkit.py
web/: __init__.py  app.py
web/static/: app.js  style.css
web/templates/: index.html
