[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reconkit-osint"
version = "2.1.0"
description = "Passive OSINT reconnaissance aggregator for a domain (CT logs, DNS, WHOIS, Hunter.io, Shodan) with JSON + HTML reporting."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Mohamed Sabkari" }]
keywords = ["osint", "recon", "security", "bug-bounty", "subdomains", "dns", "whois", "shodan"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28",
    "dnspython>=2.3",
    "python-whois>=0.8",
    "shodan>=1.28",
    "jinja2>=3.1",
    "rich>=13.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
web = ["flask>=3.0"]

[project.urls]
Homepage = "https://github.com/sabkari-mohamed/reconkit-"
Repository = "https://github.com/sabkari-mohamed/reconkit-"

[project.scripts]
reconkit = "reconkit:main"
reconkit-web = "web.app:main"

[tool.setuptools]
py-modules = ["reconkit", "meta"]
packages = ["modules", "web"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
